# releaseplease-tests

./: .release-please-manifest.json  pyproject.toml  release-please-config-hotfix.json  release-please-config.json
.github/workflows/: publish.yml  release-please-hotfix.yml  release-please.yml
sdk/: CHANGELOG.md  pyproject.toml
sdk/src/rp_test_sdk/: __init__.py
tool_packages/deep_research/: CHANGELOG.md  pyproject.toml
tool_packages/deep_research/src/rp_test_deep_research/: __init__.py
toolkit/: CHANGELOG.md  pyproject.toml
toolkit/src/rp_test_toolkit/: __init__.py
