[project]
name = "rp-test-sdk"
version = "0.2.0"
description = "Test SDK package for release-please experimentation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
