[project]
name = "rp-test-toolkit"
version = "0.1.0"
description = "Test toolkit package for release-please experimentation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "rp-test-sdk>=0.1.0,<1",
]

[tool.uv.sources]
rp-test-sdk = { workspace = true }

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
